# SoftwareCitationAuditor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/: ci.yml
softwarecitationauditor/: checker.py  downloader.py  extractor.py  main.py  openai_checker.py  prompt.in  providers.py
softwarecitationauditor/tests/: test_checker.py  test_downloader.py  test_extractor.py  test_main.py  test_openai_checker.py  test_provider.py
